# WorldKlapp

./: .gitignore  .gitmodules  .travis-minify.sh  .travis-preview.sh  .travis.enc  .travis.pub.enc  .travis.yml  CMakeLists.txt  README.md  index.html  run.sh  starterliste.csv  usr_lib_pkgconfig_mysql++.pc
api/: CMakeLists.txt  main.cpp
competitors/: main.cpp
html/: index.html
html/klapp/: api.js  api.min.js  index.html  index.min.html  main.css  main.min.css  mobile.css  mobile.min.css  search.js  search.min.js
httpd/: httpd.ini  klapprequesthandler.cpp  klapprequesthandler.h  main.cpp
httpd/share/html/: 404.html  base.html  index.html
httpd/share/static/: index.css  index.min.css  main.css  main.min.css  mobile.css  search.js  search.min.js  stickytableheaders.js  stickytableheaders.min.js
